2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Sync guile.m4.snap with upstream.

	* build-aux/guile.m4.snap: Sync w/ Guile 1.4.1.118.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Don't distribute autogen.sh.

	* Makefile.am (EXTRA_DIST): Remove autogen.sh.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move Scheme code into src/.

	* scm/postgres-col-defs.scm: Move to src/.
	* scm/postgres-gxrepl.scm: Likewise.
	* scm/postgres-meta.scm: Likewise.
	* scm/postgres-qcons.scm: Likewise.
	* scm/postgres-resdisp.scm: Likewise.
	* scm/postgres-resx.scm: Likewise.
	* scm/postgres-table.scm: Likewise.
	* scm/postgres-types.scm: Likewise.

	* doc/Makefile.am (BUILT_SOURCES) [MAINTAINER_MODE]: Delete var.
	(doc-index-prep) [MAINTAINER_MODE]: Delete target.
	(qcons-tables.texi): Update location of postgres-qcons.scm.
	(.twerp.texi): Update location of .doc-index.

	* scm/Makefile.am: Delete file.
	* scm/: Delete dir.
	* Makefile.am (SUBDIRS): Remove scm.
	(SUFFIXES): Delete var.
	(.scm.doc): Delete pattern rule.
	(DOTDOCFILES) [MAINTAINER_MODE]: Delete var.
	(.doc-index) [MAINTAINER_MODE]: Delete target.
	* configure.in (AC_CONFIG_FILES): Remove scm/Makefile.

2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Move C code into src/.

	* bcruft.h: Move to src/.
	* fcruft.c: Likewise.
	* modsup.h.snap: Likewise.
	* tmpfile.h: Likewise.
	* tmpfile.c: Likewise.
	* libpostgres.h: Integrate into src/libpq.c.
	* libpostgres.c: Likewise.
	* libpostgres_lo.c: Likewise.
	* Makefile.am (SUBDIRS): Add src.
	(EXTRA_DIST): Remove modsup.h.
	(BUILT_SOURCES, AM_CPPFLAGS, ddir, d_LTLIBRARIES): Delete vars.
	(postgres_la_SOURCES, postgres_la_LDFLAGS): Likewise.
	(SUFFIXES): Remove .x.
	(snarfcppopts): Delete var.
	(.c.x): Delete pattern rule.
	(.c.doc): Likewise.
	(install-data-hook): No longer clean up $(ddir) or do sofixing.
	(DISTCLEANFILES): Delete var.
	(CLEANFILES): Remove *.x.
	(DOTDOCFILES): Add src/libpq.doc; remove
	libpostgres.doc and libpostgres_lo.doc.