@@ -1,3 +1,9 @@
+2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Use guile.m4 facilities from Guile 1.4.1.118.
+
+	* Makefile.am (install-data-hook): Use $(mkmodcat).
+
 2008-07-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Move Scheme code into src/.
